--- a/css/main.css
+++ b/css/main.css
@@ -2,10 +2,16 @@
    Author's custom styles
    ========================================================================== */
 
+/*body {*/
+/*    padding-top: 50px;*/
+/*    padding-bottom: 20px;*/
+/*}*/
+/* Show it is fixed to the top */
 body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+    min-height: 75rem;
+    padding-top: 4.5rem;
 }
+
 
 rounded_box {
     cursor: pointer;
